# mctp-usb-tool

mctp-usb-tool/: README.md  mctp-usb-tool.bb  usb.md
mctp-usb-tool/files/: meson.build
mctp-usb-tool/files/src/: mctp-usb-tool.c
